// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-sc-s87lnr-2 fGrLrP"
>
  <div
    class="card__Container-sc-s87lnr-1 bASBDN"
  >
    <p
      class="card__Title-sc-s87lnr-0 cVkMoA"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 dPUYVl"
    >
      <div
        class="card__Item-sc-s87lnr-13 hqYmjh"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-s87lnr-14 iXErlh"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 eVxnrd"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 dRTOSo"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-s87lnr-4 jZQEkZ"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-s87lnr-1 bASBDN"
  >
    <p
      class="card__Title-sc-s87lnr-0 cVkMoA"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 dPUYVl"
    >
      <div
        class="card__Item-sc-s87lnr-13 hqYmjh"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-s87lnr-14 iXErlh"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 eVxnrd"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 dRTOSo"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-s87lnr-4 jZQEkZ"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-s87lnr-2 fGrLrP"
>
  <div
    class="card__Container-sc-s87lnr-1 bASBDN"
  >
    <p
      class="card__Title-sc-s87lnr-0 cVkMoA"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 dPUYVl"
    >
      <div
        class="card__Item-sc-s87lnr-13 hqYmjh"
      >
        <img
          class="card__Image-sc-s87lnr-14 iXErlh"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 eVxnrd"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 dRTOSo"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-s87lnr-4 jZQEkZ"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-s87lnr-1 bASBDN"
  >
    <p
      class="card__Title-sc-s87lnr-0 cVkMoA"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-s87lnr-12 dPUYVl"
    >
      <div
        class="card__Item-sc-s87lnr-13 hqYmjh"
      >
        <img
          class="card__Image-sc-s87lnr-14 iXErlh"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-s87lnr-11 eVxnrd"
        >
          <p
            class="card__SubTitle-sc-s87lnr-3 dRTOSo"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-s87lnr-4 jZQEkZ"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
